--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
     },
     "Lua.workspace.library": [
         "~\\.vscode\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
-    ]
+    ],
+    "stylua.targetReleaseVersion": "latest"
 }
